(lang dune 3.5)

(name planificateur)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name planificateur)
 (synopsis "Planificateur")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  ("graph")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
